<resources>
    <string name="app_name">MonriAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="content_main_btn_pay">PAY</string>
    <string name="content_main_cb_txt_save_card_for_future_payments">Save card for future payments</string>
    <string name="btn_payment_with_new_card">Payment with new card</string>
    <string name="btn_payment_with_saved_card">Payment with saved card</string>
    <string name="pick_payment_method">Pick Payment Method</string>
    <string name="btn_payment_method_1">VISA 440960******2830</string>
    <string name="btn_payment_method_2">VISA 403530******4083</string>
    <string name="btn_payment_example">New Payment</string>
    <string name="btn_payment_session_create">Payment Sessions - New Payment</string>
    <string name="btn_payment_example_3ds1">New Payment - 3DS1</string>
    <string name="btn_add_payment_method_example">New Payment Method</string>
    <string name="btn_add_payment_method_example_3ds1">New Payment Method - 3DS1</string>
    <string name="btn_payment_google_pay">Google pay payment</string>
    <string name="btn_payment_google_pay_simple">Google pay payment (alternative)</string>
    <string name="btn_scandoc">ScanDoc</string>
    <string name="title_activity_payment_picker">PaymentPickerActivity</string>
    <string name="continue_with_3ds_enrolled_card">Continue with 3ds enrolled card</string>
    <string name="continue_with_non_3ds_enrolled_card">Continue with not enrolled 3DS card</string>
    <string name="btn_payment_example_save_card_for_future_payments">New payment + save card</string>
    <string name="btn_payment_example_saved_card_3ds">Saved Card 3DS - New Payment</string>
    <string name="btn_payment_example_saved_card_non_3ds">Saved Card, No 3DS - New Payment</string>
    <string name="btn_create_customer">Create a customer</string>
    <string name="btn_update_customer">Update customer</string>
    <string name="btn_get_all_customers">Get all customers</string>
    <string name="btn_retrieve_customer">Retrieve customer</string>
    <string name="btn_retrieve_customer_via_merchant_id">Retrieve customer via merchant id</string>
    <string name="btn_customer_activity">Customer activity</string>
    <string name="btn_retrieve_saved_cards_from_customer">Retrieve saved cards from customer</string>
    <string name="btn_confirm_payment_customer_uuid">Confirm payment customer uuid</string>
    <string name="btn_retrieve_saved_cards_from_merchant">Retrieve saved cards from merchant</string>
    <string name="btn_delete_customer">Delete customer</string>
    <string name="direct_payment">Direct payment (pay-cek-hr)</string>
    <string name="or">OR</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="card_is_not_valid">Card is not valid</string>

    <string name="google_pay_activity_create_payment_session_rejected">Create payment session rejected: %1$s</string>
    <string name="google_pay_activity_create_payment_session_error">Create payment session error: %1$s</string>
    <string name="google_pay_activity_total_price_label">Total price</string>
    <string name="google_pay_activity_start_google_pay_payment_error">Start google pay payment error: %1$s</string>
    <string name="google_pay_activity_error_initializing_is_ready_to_pay_request">Error initializing isReadyToPayRequest from response</string>
    <string name="google_pay_activity_error_initializing_pay_button">Error initializing pay button: %1$s</string>
    <string name="google_pay_activity_error_not_ready_to_pay">Error: not ready to pay</string>
    <string name="google_pay_activity_is_ready_to_pay_returned_a_failure">IsReadyToPay returned a failure %1$s</string>
    <string name="google_pay_activity_error_parsing_payment_data_from_request_payment_method">Error parsing paymentData from requestPayment method: %1$s</string>
    <string name="google_pay_activity_request_payment_method_failure">RequestPayment method failure: %1$d %2$s</string>
    <string name="google_pay_activity_confirm_payment_error">Confirm payment error: %1$s</string>
    <string name="google_pay_activity_confirm_payment_result">Confirm payment result: %1$s %2$s</string>
    <string name="google_pay_activity_google_pay_handler_exception">GooglePayHandlerException: %1$d</string>
    <string name="google_pay_activity_on_not_ready_to_pay_with_google_pay_called">On not ready to pay with google pay called</string>
    <string name="google_pay_activity_failed_to_get_payment_method_data_from_user">Failed to get payment method data from user, status code: %1$d</string>
    <string name="google_pay_activity_proceed_with_google_pay_button_text">Proceed with google pay</string>

    <string name="scandoc_activity_camera_permission_required">Camera permission is required for this activity</string>
    <string name="scandoc_activity_validate_button_text">Validate</string>
    <string name="scandoc_activity_retake_button_text">Back</string>
    <string name="scandoc_activity_error_dialog_title">Error</string>
    <string name="scandoc_activity_error_dialog_ok_button_text">Ok</string>
    <string name="scandoc_activity_validation_error_text">Validation: %s</string>
    <string name="scandoc_activity_extraction_error_text">Extraction: %s</string>
    <string name="scandoc_extracted_data_fragment_title">Extracted data</string>
    <string name="scandoc_extracted_data_fragment_image_data_description">Image processed by server:</string>
    <string name="scandoc_extracted_data_fragment_analysis_time_label">Analysis time:</string>
    <string name="scandoc_extracted_data_fragment_holder_name_label">Holder name:</string>
    <string name="scandoc_extracted_data_fragment_iban_label">IBAN:</string>
    <string name="scandoc_extracted_data_fragment_issued_date_label">Issued date:</string>
    <string name="scandoc_extracted_data_fragment_card_number_label">Card number:</string>
    <string name="scandoc_extracted_data_fragment_expiry_date_label">Expiry_date:</string>
    <string name="scandoc_extracted_data_fragment_luhn_check_label">Luhn check:</string>
    <string name="scandoc_extracted_data_fragment_extracted_texts_label">Extracted texts:</string>
</resources>
