<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <Button
        android:id="@+id/btn_payment_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_example" />

    <Button
        android:id="@+id/btn_payment_example_3ds1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_example_3ds1" />

    <Button
        android:id="@+id/btn_payment_example_save_card_for_future_payments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_example_save_card_for_future_payments" />

    <Button
        android:id="@+id/btn_payment_example_saved_card_non_3ds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_example_saved_card_non_3ds" />

    <Button
        android:id="@+id/btn_payment_example_saved_card_3ds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_example_saved_card_3ds" />

    <Button
        android:id="@+id/btn_add_payment_method_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_payment_method_example" />

    <Button
        android:id="@+id/btn_add_payment_method_example_3ds1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_payment_method_example_3ds1" />

    <Button
        android:id="@+id/btn_google_pay_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_google_pay" />

    <Button
        android:id="@+id/btn_google_pay_activity_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_google_pay_simple" />

    <Button
        android:id="@+id/btn_scandoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scandoc" />

    <TextView
        android:id="@+id/txt_result_payment_example"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="20dp"
        tools:text="jako dugi text jako dugi text jako dugi text jako dugi text jako dugi text jako dugi text jako dugi text jako dugi text jako dugi text" />


</LinearLayout>