<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ExamplesActivity">

    <Button
        android:id="@+id/btn_payment_with_new_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btn_payment_with_new_card" />

    <Button
        android:id="@+id/btn_payment_with_saved_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_with_saved_card" />

    <View
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/btn_payment_session_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_payment_session_create" />

    <Button
        android:id="@+id/btn_customer_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_customer_activity" />

</LinearLayout>